--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
     <title>KEES | Best Online Shopping in Qatar</title>
 
     <script>
-      console.log("v-3.3 Categories Response Fix");
+      console.log("v-3.4 Blog Design Added");
     </script>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
