--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
   <title>KEES | Best Online Shopping in Qatar</title>
 
   <script>
-    console.log("v-3.6 NC");
+    console.log("v-3.7");
   </script>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
